--- a/p1.html
+++ b/p1.html
@@ -2,33 +2,40 @@
 	<head>
 	<style>
 	body {
-    		-webkit-animation: colorchange 6s infinite; 
-	    animation: colorchange 6s infinite;
+    		-webkit-animation: colorchange 7s infinite; 
+	    animation: colorchange 7s infinite;
 	}
 	@-webkit-keyframes colorchange {
      	0%  {background: #33FFF3;}
-    	25%  {background: #78281F;}
-    	50%  {background: #117A65;}
-    	75%  {background: #DC7633;}
-    	100% {background: #9B59B6;}
+    	25%  {background: #3366ff;}
+    	50%  {background: #62eace;}
+    	75%  {background: #e59966;}
+    	100% {background: #ffffe6;}
 	}
 	@keyframes colorchange {
      	0%  {background: #33FFF3;}
-    	25%  {background: #78281F;}
-    	50%  {background: #117A65;}
-    	75%  {background: #DC7633;}
-    100% {background: #9B59B6;}
+    	25%  {background: #3366ff;}
+    	50%  {background: #62eace;}
+    	75%  {background: #e59966;}
+    100% {background: #ffffe6;}
 	}   
 	</style>
 
 	</head>
 	<body> <title>  Welcome to Presidency University  </title>
 		<hr> </hr>
-		<h3> Hello ! Welcome to Presidency University ! </h3>
+		<h3><center> Hello ! Welcome to Presidency University !  </center></h3>
 		<hr></hr><hr></hr><br/>
-		<h4> Do you wanna hear out a secret? </h4>
+		<h4><i> Do you wanna hear out a secret? </i></h4> 
 		<p><u> Here is a first paragraph of text.</u></p>
 		<p><b> Here is a second paragraph of text.</b></p>
 		<p><i> Here is a third paragraph of text.</i></p>
+		<pre> YOU </pre>
+		<pre> 		DID </pre>
+		<pre>			It !!!</pre>	
+
+		<center><img src= "world.jpg" alt = "World green day" width="700" height="500"></center>
+		<a href="https://en.wikipedia.org/wiki/Green_Day"	>	
+		<center><button type="button">Google Me!</button></center> 
 	</body>
 </html>
