--- a/span.html
+++ b/span.html
@@ -4,8 +4,7 @@
 </head>
 
 <body>
-	<p>This is the example of <span style="color:green">spantag</span>
-	          and the <span style="color:red">div tag</span>alongwith CSS</p>
+	<p>This is the example of <span style="color:green">spantag</span> and the <span style="color:red">div tag</span>alongwith CSS</p>
 	</body>
 </html>
 
