--- a/tab.html
+++ b/tab.html
@@ -1,6 +1,13 @@
 <html>
-	<head><title> Time Table</title></head>
-	<body bgcolor='lightblue'>
+	<head><title> Time Table</title>
+    	      <style>
+		   div  {
+			   background-color:red;	 
+		    }
+	      </style>
+	</head>
+	
+	<body>
 
 
 		<marquee direction="right"><h1><b><u> TIME TABLE </h1></b></marquee>
@@ -13,6 +20,8 @@
 		</table>
 		</br>
 		<table border='4'>
+
+		  <div>			
 			<tr>
 				<th align='left'> HOUR</th>
 				<th> 1 </th>
@@ -24,6 +33,7 @@
 				<th> 6 </th>
 				<th> 7 </th>	 	 
 			</tr>
+		  </div>
          		<tr>
 				<td> Time/Day </td>
 				<td>	9:00 AM - 9:55 AM </td>
@@ -38,9 +48,9 @@
 			<tr>
 				<td> MONDAY </td>
 				<td colspan='2' align='center'> AT </td>
-				<td rowspan='6'> TEABREAK</td>
-				<td align='center'> ML </td>
-				<td rowspan='5'> LUNCH</td>			
+				<td rowspan='6' ALIGN='center'> TEABREAK</td>
+				<td align='center' > ML </td> 
+				<td rowspan='5' align='center'> LUNCH</td>			
 				<td align='center'> DE </td>
 				<td align='center' colspan='2'> NP LAB </td>
 			</tr>
