--- a/pic.html
+++ b/pic.html
@@ -3,6 +3,7 @@
 	<body>
 		<h1> Hello world </h1>
 		</br></br></br>
-		<center><img src="globe.jpg" alt="Globe" width ="50" height="50"> </center>
+		<img style="border:1px solid red;-moz-opacity:0.2;"
+			 src="picz.jpeg" >
 	</body>
 </html>
